# acoustic_feat_extractor

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
gtm_feat/: __init__.py  config.py  dataset.py  features.py  plots.py
gtm_feat/audio/: base.py  embedding.py  factory.py  short_time.py
gtm_feat/bob/: cli.py
gtm_feat/bob/learn/em/: factor_analysis.py  gmm.py  ivector.py  kmeans.py  linear_scoring.py  wccn.py  whitening.py
gtm_feat/modeling/: predict.py  train.py
tests/: test_audio_base.py  test_embedding_extractors.py  test_extractors_embedding.py  test_factory_extractor.py  test_short_time_extractors.py
