[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gtm_feat"
version = "0.0.1"
description = "A Python implementation of aan acoustic feature extractor for the GTM Lab at Universidade de Vigo"
authors = [
  { name = "Jose Manuel Ramirez Sanchez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["gtm_feat"]
force_sort_within_sections = true


